syntax = "proto3";

option go_package = "productservice/product";

package product;

service ProductInfo {
    rpc GetProduct (ProductID) returns (Product) {}
    rpc AddProduct (Product) returns (Product) {}
}

message ProductID {
    int64 value = 1;
}

message Product {
    int64 product_id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
}